objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Owner__c</fullName>
        <formula>IF(OR(Account_Id__c = 'A3081216.17',Account_Id__c = '1121696',Account_Id__c = '1121699',Account_Id__c = '1121694',Account_Id__c = '1121695',Account_Id__c = '1121698'), 'Jäger', IF(Account_Id__c = 'A3081216.7','Lachmair',IF(Account_Id__c = 'A3081216.13','VH24','VR24') ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bankkonto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_old__c</fullName>
        <label>CreatedDate_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>35</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_mapping_process_at__c</fullName>
        <inlineHelpText>The date of the last execution of the "transaction mapping process" for this Transaction</inlineHelpText>
        <label>Last mapping process at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mapping_Error__c</fullName>
        <label>Mappingstatus</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_records__c</fullName>
        <inlineHelpText>Contains the records the transaction was matched with based on the Purpose field. Note that if there are any mapping errors the transaction will not be linked to the record and marked as "Processed". It's for debugging purposes mainly.</inlineHelpText>
        <label>Matching records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Methode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Betreff</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransaktionImpID__c</fullName>
        <externalId>true</externalId>
        <label>TransaktionImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaktion</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaktionen</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>Purpose__c</columns>
        <columns>Amount__c</columns>
        <columns>Stage__c</columns>
        <columns>Mapping_Error__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Bank_Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Account_Id__c</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>Purpose__c</columns>
        <columns>Amount__c</columns>
        <columns>Stage__c</columns>
        <columns>Mapping_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Offene Transaktionen</label>
    </listViews>
    <listViews>
        <fullName>Processed_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Account_Id__c</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>Purpose__c</columns>
        <columns>Amount__c</columns>
        <columns>Stage__c</columns>
        <columns>Mapping_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <label>Zugewiesene Transaktionen</label>
    </listViews>
    <listViews>
        <fullName>VH24</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Purpose__c</columns>
        <columns>Stage__c</columns>
        <columns>Mapping_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Id__c</field>
            <operation>equals</operation>
            <value>A3081216.13</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>VH24</label>
        <sharedTo>
            <group>VH24_Accounting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VR24</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Purpose__c</columns>
        <columns>Stage__c</columns>
        <columns>Mapping_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Id__c</field>
            <operation>equals</operation>
            <value>A3081216.1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>VR24</label>
        <sharedTo>
            <group>VR24_Accounting</group>
        </sharedTo>
    </listViews>
</CustomObject>